Fix(main page) horisontal scroll issue on mobile mode partially fixed

--- a/src/app/core/pages/main-page/main-page.component.scss
+++ b/src/app/core/pages/main-page/main-page.component.scss
@@ -10,15 +10,6 @@
   background-size: cover;
 }
 
-.border-y-orange {
-  border-top: 1px solid $main-orange;
-  border-bottom: 1px solid $main-orange;
-}
-
-.background-white {
-  background-color: #fff;
-}
-
 .parallax {
   height: 100vh; min-height: 600px;
   overflow-x: hidden; overflow-y: auto;
@@ -38,6 +29,7 @@
     position: absolute;
     top: 0; right: 0; bottom: 0; left: -15px;
     transform: translateZ(-1px) scale(1.5);
+    // background-image: url('assets/img/main-bg-grey.jpg');
     background-size: 100%;
     z-index: -1;
     @include vendor-background-cover;
@@ -91,8 +83,7 @@
 
 .slogan-parallax {
   width: 100%; height: 100%;
-  position: absolute; top: -50px; right: 0; bottom: 0; left: 0;
-  transform: translateZ(-2px) scale(2.5);
+  transform: translateY(-50px) translateZ(-2px) scale(2.5);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -102,7 +93,10 @@
   transition: all 1s;
   color: #fff;
   z-index: 10;
-  @include m('visible') { opacity: 1; top: 0; }
+  @include m('visible') {
+    transform: translateY(0) translateZ(-2px) scale(2.5);
+    opacity: 1;
+  }
 }
 
 .collection {
